--- a/config.yaml
+++ b/config.yaml
@@ -85,8 +85,8 @@ params:
         config.yaml: \themes\forty\static\img
         subtitle: A short Introduction
         title: About me
-        slug: Purva Sikri 
-        url: blogs/Purva Sikri
+        slug: purva
+        url: blogs/purva
       - image: pic02.jpg
         subtitle: Feugiat Amet Tempus
         title: Tempus
