--- a/config.yaml
+++ b/config.yaml
@@ -99,7 +99,7 @@ params:
         title: Ipsum
         url: blogs/ipsum
       - image: pic05.jpg
-        subtitle: Ipsum Dolor Sit Amet
+        subtitle: Ipsum Dolor Sit t
         title: Consequat
         url: blogs/ipsum
       - image: pic06.jpg
