--- a/config.yaml
+++ b/config.yaml
@@ -8,21 +8,21 @@ params:
   banner:
     buttonText: Get Started
     subtitle: |-
-      THE FIRST (1) WEBSITE DESIGNED
+      THE FIRST WEBSITE DESIGNED
       AND RELEASED BY PURVA SIKRI.
     title: Hi, my name is Purva Sikri
   blog: {}
   contact:
     address:
       - city: London, NW8 9NY
-        country: United Kingdom
+        country: United Kingdom.
         street: Halll Road
         title: Address
     buttonClear: Clear
     buttonSend: Send message
     email:
       - email: psikri.mam2022@london.edu
-        title: Email
+        title: Email ID
     enable: yes
     phone:
       - phone: (+44) 07376136866
@@ -112,8 +112,7 @@ params:
     subtitle: "Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero.
       \n    Mauris aliquet magna magna sed nunc rhoncus pharetra. \n    Pellentesque
       condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia
-      pellentesque lorem ipsum dolor. \n    Nullam et orci eu lorem consequat tincidunt.
-      Vivamus et sagittis libero.\n    Mauris aliquet magna magna sed nunc rhoncus
+      pellenteahakjshabsak tis libero.\n    Mauris aliquet magna magna sed nunc rhoncus
       amet pharetra et feugiat tempus."
     title: Massa libero
     url: blogs
