--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 baseURL: https://purvasikri.netlify.app/
 languageCode: en-us
-title: Portfolio website DSDSDF for Purva Sikri
+title: Portfolio website for Purva Sikri
 theme: forty
 googleAnalytics: ''
 disqusShortname: ''
@@ -111,9 +111,9 @@ params:
     enable: yes
     subtitle: "Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero.
       \n    Mauris aliquet magna magna sed nunc rhoncus pharetra. \n    Pellentesque
-      condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia
+      condimentum sem. In efficrghvkvd ligula tate urna. Maecenas laoreet massa vel lacinia
       pellenteahakjshabsak tis libero.\n    Mauris aliquet magna magna sed nunc rhoncus
-      amet pharetra et feugiat tempus."
+      amet pharetrdwtd  ew t feugiat tempus."
     title: Massa libero
     url: blogs
     
