--- a/config.yaml
+++ b/config.yaml
@@ -9,7 +9,7 @@ params:
     buttonText: Get Started
     subtitle: |-
       THE FIRST WEBSITE DESIGNED
-      AND RELEASED BY PURVA SIKRI.
+      BY PURVA SIKRI!!
     title: Hi, my name is Purva Sikri
   blog: {}
   contact:
