--- a/config.yaml
+++ b/config.yaml
@@ -9,7 +9,7 @@ params:
     buttonText: Get Started
     subtitle: |-
       THE FIRST (1) WEBSITE DESIGNED
-      AND RELEASED BY PURVA SIKRI.
+      AND RELEASED BY PURVA SIKRI !!!!!!!
     title: Hi, my name is Purva Sikri
   blog: {}
   contact:
@@ -111,7 +111,7 @@ params:
     enable: yes
     subtitle: "Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero.
       \n    Mauris aliquet magna magna sed nunc rhoncus pharetra. \n    Pellentesque
-      condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia
+      condimentuafjxalisx m sem. In efficb cnfj itur ligula tate urna. Maecenas laoreet massa vel lacinia
       pellentesque lorem ipsum dolor. \n    Nullam et orci eu lorem consequat tincidunt.
       Vivamus et sagittis libero.\n    Mauris aliquet magna magna sed nunc rhoncus
       amet pharetra et feugiat tempus."
