--- a/config.yaml
+++ b/config.yaml
@@ -29,7 +29,7 @@ params:
         title: Phone
   custom_css: []
   custom_js: []
-  description: Your description
+  description: Your desc
   error404:
     heading: Page couldn't be found
     text: Please visit [this page](/)
