--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ params:
   banner:
     buttonText: Get Started
     subtitle: |-
-      THE FIRST WEBSITE DESIGNED
+      WEBSITE DESIGNED 
       AND RELEASED BY PURVA SIKRI.
     title: Hi, my name is Purva Sikri
   blog: {}
