--- a/config.yaml
+++ b/config.yaml
@@ -109,7 +109,7 @@ params:
   two:
     buttonText: Get Started
     enable: yes
-    subtitle: "Helloooo"
+    subtitle: "Hello"
     title: Massa libero
     url: blogs
     
