--- a/config.yaml
+++ b/config.yaml
@@ -88,7 +88,7 @@ params:
       - image: Bitcoin.jpg
         subtitle: Case study competition
         title: Supply chain marries blockchaon
-        url: blogs/tempus
+        url: blogs/Blockchain
       - image: Research.jpg
         subtitle: Cognitive capture; a euphemism for malfeasence?
         title: Research papers - Finance
