--- a/config.yaml
+++ b/config.yaml
@@ -83,7 +83,7 @@ params:
       - image: Hello.jpg
         subtitle: A short Introduction
         title: About me
-        slug: purva12
+        slug: purva
         url: blogs/purva
       - image: Bitcoin.jpg
         subtitle: Case study competition
