--- a/config.yaml
+++ b/config.yaml
@@ -90,8 +90,8 @@ params:
         title: Supply chain marries Blockchain
         url: blogs/blockchain
       - image: Research.jpg
-        subtitle: Cognitive capture; a euphemism for malfeasence?
-        title: Research papers - Finance
+        subtitle: Cognitive capture and Right to information 
+        title: Research papers - Financial and Social
         url: blogs/magna
       - image: RTI.jpg
         subtitle: Right to Information during COVID 
