--- a/config.yaml
+++ b/config.yaml
@@ -92,7 +92,7 @@ params:
       - image: Research.jpg
         subtitle: Cognitive capture and Right to information 
         title: Research papers - Financial and Social
-        url: blogs/magna1
+        url: blogs/magna
       - image: RTI.jpg
         subtitle: Right to Information during COVID 
         title: Research paper - Social
