--- a/config.yaml
+++ b/config.yaml
@@ -109,7 +109,7 @@ params:
     buttonText: Get Started
     enable: yes
     subtitle: "Hello"
-    title: Massa libero
+    title: Massa lbero
     url: blogs
     
 
