--- a/config.yaml
+++ b/config.yaml
@@ -74,7 +74,7 @@ params:
   tiles:
     enable: yes
     showcase:
-      - image: Profpic.jpg
+      - image: Profpic2.jpg
         subtitle: A short Introduction
         title: About me
         slug: purva
