--- a/config.yaml
+++ b/config.yaml
@@ -54,20 +54,19 @@ params:
   name: Purva Sikri
   navigation:
     button1:
-      - name: My projects
-        url: blogs
-    button2:
-      - name: Log In
+      - name: Main Menu
         url: '#'
     links:
       - name: Home
         url: '#'
-      - name: Blogs
-        url: blogs
-      - name: Generic Blog
-        url: blogs/ipsum
-      - name: Elements
-        url: elements.html
+      - name: About me
+        url: blogs/purva
+      - name: Research papers 
+        url: blogs/magna
+      - name: R projects
+        url: blogs/blockchain
+      - name: Pyhon projects
+        url: blogs/python
     menu: Menu
     #subtitle: By HTML5 Up
     #title: 
