--- a/config.yaml
+++ b/config.yaml
@@ -93,11 +93,11 @@ params:
       - image: IMPnew.png
         subtitle: Target banking in India
         title: Python projects
-        url: blogs/python
+        url: https://drive.google.com/file/d/1uVPM-jeMgNJ81DbXeu_kILqD7r6iOPp6/view?usp=sharing
       - image: IBM.png
         subtitle: A simulation for IBM and Maersk 
         title: Cost-benefit analysis of blockchain 
-        url: blogs/last1
+        url: https://drive.google.com/file/d/1EERD8I1ggbvxTW4CCI_YMs6oz4iPmD2C/view?usp=sharing
   two:
     buttonText: Blog description 
     enable: yes
