--- a/config.yaml
+++ b/config.yaml
@@ -76,7 +76,7 @@ params:
       - image: picblog.png
         subtitle: A short Introduction
         title: About me
-        slug: purva
+        slug: purva1
         url: blogs/purva
       - image: ggplot2.png
         subtitle: Data analysis
