--- a/config.yaml
+++ b/config.yaml
@@ -74,29 +74,29 @@ params:
     enable: yes
     showcase:
       - image: picblog.png
-        subtitle: A short Introduction
+        subtitle: A professional introduction and authored articles  
         title: About me
         slug: purva
         url: blogs/purva
-      - image: ggplot2.png
-        subtitle: Data analysis
+      - image: lbs.png
+        subtitle: A university group project (ggplot, t-test, and hypothesis testing)
         title: R-studio data analytics
         url: blogs/blockchain
-      - image: paraRTI.png
-        subtitle: Cognitive capture and Right to information 
-        title: Research papers - Financial and Social
+      - image: rti2.png
+        subtitle: 1. Cognitive capture 2. Right to information
+        title: Published research papers - Financial and Social
         url: blogs/magna
-      - image: blog_4pic.png
-        subtitle: Tidyverse, dplyr, ggplot, and t-test (using bootstrap).
-        title: Rmarkdown projects 
+      - image: lbss.png
+        subtitle: A university group project (Tidyverse, dplyr, ggplot, and t-test; using bootstrap).
+        title: R for data science 
         url: blogs/rti1
-      - image: IMPnew.png
-        subtitle: Target banking in India
-        title: Python projects
+      - image: iim.png
+        subtitle: A python project subsuming topics such as AUC, ROC, logistic regression, and decision tree classifiers. 
+        title: Target Banking in India 
         url: https://drive.google.com/file/d/1BpuBM3TcjmIyCdv9k0CO1GEFk85mYrg9/view?usp=sharing
-      - image: IBM.png
-        subtitle: A simulation for IBM and Maersk 
-        title: Cost-benefit analysis of blockchain 
+      - image: IBM2.png
+        subtitle: In an All-India case study competition, we created a simulation for IBM and Maersk; Tradelens and performed a cost-benefit analysis to see whether it should adopt blockchain for operations.
+        title: Cost-benefit analysis of blockchain for the logistic sector  
         url: https://drive.google.com/file/d/1EERD8I1ggbvxTW4CCI_YMs6oz4iPmD2C/view?usp=sharing
   two:
     buttonText: Blog description 
