--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 baseURL: https://purvasikri.netlify.app/
 languageCode: en-us
-title: Portfolio website by Purva Sikri
+title: Portfolio website by Purva
 theme: forty
 googleAnalytics: ''
 params:
